--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -74,7 +74,7 @@ O sistema foi testado com duas configurações diferentes. A primeira configuração
 
 Inicialmente cada objeto foi posicionado no ambiente de testes e foram efetuadas $360$ capturas. Uma captura a cada $1^o$, tanto para o fundo, quanto para o objeto. As imagens foram salvas e a classe e ângulo de captura armazenados. Após capturar as imagens para todos os objetos os descritores foram calculados conforme exposto no capítulo \ref{chap:desenv}. Tanto a rede de classificação quanto as redes de estimativa de ângulo foram treinadas com os descritores das $360$ capturas.
 
-Na sequência foram capturadas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo ($8$ objetos $x$ $20$ ângulos = $160$ imagens). Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para cada objeto existem duas classes na matriz de confusão. Uma para a normalização utilizando o autovetor $A$ e outra para o autovetor $A'=-A$. O valor esperado na diagonal da matriz de confusão é de $A + A' = 20$, pois foram capturadas 20 imagens que podem ter a normalização correta utilizando tanto $A$ quanto $A'$. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste1_medio}, \ref{fig:testes_teste1_desvio} e \ref{fig:testes_teste1_maximo}.
+Na sequência foram capturadas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo ($8$ objetos $x$ $20$ ângulos = $160$ imagens). Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para cada objeto existem duas classes na matriz de confusão. Uma para a normalização utilizando o autovetor $\gamma$ e outra para o autovetor $\gamma'=-\gamma$. O valor esperado na diagonal da matriz de confusão é de $\gamma + {\gamma}' = 20, \gamma \in \left \{ A, C, 5, T, R, G, S, 6  \right \}$, pois foram capturadas 20 imagens que podem ter a normalização correta utilizando tanto $\gamma$ quanto ${\gamma}'$. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste1_medio}, \ref{fig:testes_teste1_desvio} e \ref{fig:testes_teste1_maximo}.
 
 \begin{figure}[H]
 	\centering
@@ -114,7 +114,7 @@ Na sequência foram capturadas 20 imagens em rotações aleatórias de cada objeto e
 
 O mesmo procedimento executado para o primeiro teste foi executado para o segundo, no entanto com algumas diferenças. Foram utilizados todos os 16 objetos mostrados na figura \ref{fig:testes_objetos}. Para o objeto $l$ foram efetuadas apenas $180$ capturas de $0$ a $179^o$ por se tratar de um objeto simétrico. Para os demais objetos foram efetuadas $360$ capturas. Após a captura as redes de classificação e estimativa de ângulo foram treinadas.
 
-Em seguida foram capturadas 20 imagens em rotações aleatórias para cada objeto, totalizando 320 imagens de teste. O sistema foi executado e os resultados foram comparados com os valores esperados conforme a matriz de confusão apresentada na figura \ref{fig:testes_teste2_matriz}. A matriz de confusão apresentada mostra apenas 31 classes ao invés de 32 como esperado. Isso se dá pelo fato do objetos $l$ ser simétrico, resultando sempre em um autovetor correto para a normalização. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste2_medio}, \ref{fig:testes_teste2_desvio} e \ref{fig:testes_teste2_maximo}.
+Em seguida foram capturadas 20 imagens em rotações aleatórias para cada objeto, totalizando 320 imagens de teste. O sistema foi executado e os resultados foram comparados com os valores esperados conforme a matriz de confusão apresentada na figura \ref{fig:testes_teste2_matriz}. A matriz de confusão apresentada mostra apenas 31 classes ao invés de 32 como esperado. Isso se dá pelo fato do objetos $l$ ser simétrico, resultando sempre em um autovetor correto para a normalização. O valor esperado na diagonal da matriz de confusão é de $\gamma + {\gamma}' = 20, \gamma \in \left \{ A, C, 5, T, R, G, S, 6, Bb, tr, l, Ab, ti, bn, \$, sn  \right \}$. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste2_medio}, \ref{fig:testes_teste2_desvio} e \ref{fig:testes_teste2_maximo}.
 
 \begin{figure}[H]
 	\centering
